# ESCape32

./: CMakeLists.txt
.github/workflows/: build-cassee.yml
mcu/AT32F421/: config.c
mcu/GD32E230/: config.c
mcu/GD32F350/: config.c
mcu/STM32F051/: config.c
mcu/STM32G071/: config.c
mcu/STM32G431/: config.c
mcu/STM32L431/: config.c
src/: cli.c  common.h
